--- a/templates/results.html
+++ b/templates/results.html
@@ -5,25 +5,17 @@
 {% endblock %}
 
 {% block body %}
-    <div>
+    <div class="results-details">
         <h1>Your Quiz Results</h1>
         <p>You scored {{ score }} out of {{ total }}.</p>
+        <p><strong>Percentage:</strong> {{ percentage }}%</p>
+        <p><strong>Grade:</strong> {{ grade }}</p>
+
+        <div class="actions">
+            <a href="{{ url_for('quiz') }}" class="btn btn-primary btn-lg">Take Another Quiz</a>
+            {% if session.get('user_id') %}
+                <a href="{{ url_for('history') }}" class="btn btn-secondary btn-lg">View History</a>
+            {% endif %}
+        </div>
     </div>
-
-    <!-- Result details -->
-    <div class="results-details">
-        <h2>Detailed Results:</h2>
-        <ul>
-            {% for question, user_answer, correct_answer in results %}
-                <li>
-                    <strong>Question:</strong> {{ question }}<br>
-                    <strong>Your Answer:</strong> {{ user_answer }}<br>
-                    <strong>Correct Answer:</strong> {{ correct_answer }}<br>
-                </li>
-            {% endfor %}
-        </ul>
-    </div>
-
-    <a href="/">Take Another Quiz</a>
-
 {% endblock %}
