fix: bad button texts

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,8 @@
         </p>
 
         <div class="hero-actions">
-            <a href="{{ url_for('auth.register') }}" class="btn btn-primary">Create Free Account</a>
-            <a href="{{ url_for('quiz') }}" class="btn btn-secondary">Try a Demo Quiz</a>
+            <a href="{{ url_for('auth.register') }}" class="btn btn-primary">Get started</a>
+            <a href="{{ url_for('quiz') }}" class="btn btn-secondary">Try Demo</a>
         </div>
     </section>
 
