updated paths in routes

--- a/app/templates/forgot_password.html
+++ b/app/templates/forgot_password.html
@@ -46,7 +46,7 @@
         <!-- Confirming new password submission -->
         {% elif form_type == "success" %}
             <h2>Your password has been successfully reset.</h2>
-            <a href="{{ url_for('login') }}" class="btn btn-primary">Go to Login</a>
+            <a href="{{ url_for('auth.login') }}" class="btn btn-primary">Go to Login</a>
         {% endif %}
     </div>
 {% endblock %}
