--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,7 +21,7 @@
 
         <div class="hero-actions">
             <a href="{{ url_for('auth.register') }}" class="btn btn-primary">Get started</a>
-            <a href="{{ url_for('quiz') }}" class="btn btn-secondary">Try Demo</a>
+            <a href="{{ url_for('main.quiz') }}" class="btn btn-secondary">Try Demo</a>
         </div>
     </section>
 
@@ -104,7 +104,7 @@
             <ul class="footer-list">
                 <li>Copyright &copy; 2025 DevBrain. All rights reserved.</li>
                 <li><a href="https://github.com/RichardOyelowo/DevBrain.git">GitHub Page</a></li>
-                <li><a href="{{ url_for('about') }}">About DevBrain</a></li>
+                <li><a href="{{ url_for('main.about') }}">About DevBrain</a></li>
             </ul>
         </footer>
 
