--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -53,7 +53,7 @@
 
     <section class="about-cta">
         <p>Ready to test what you know?</p>
-        <a href="{{ url_for('index') }}" class="btn btn-primary">Take a Quiz</a>
+        <a href="{{ url_for('main.index') }}" class="btn btn-primary">Take a Quiz</a>
     </section>
 </main>
 
