--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -36,7 +36,7 @@
             </table>
         {% else %}
             <h3>No quiz history available.</h3>
-            <a href="{{ url_for('quiz') }}" class="btn btn-primary">Take Your First Quiz</a>
+            <a href="{{ url_for('main.quiz') }}" class="btn btn-primary">Take Your First Quiz</a>
         {% endif %}
     </div>
 {% endblock %}
