updated pages to display form errors

--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -1,8 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}
-    : Results
-{% endblock %}
+{% block title %}: Results{% endblock %}
 
 {% block body %}
     <div class="results-details">
