--- a/app/templates/forgot_password.html
+++ b/app/templates/forgot_password.html
@@ -8,16 +8,27 @@
                 <h2 class="error-message">{{ error }}</h2>
             {% endif %}
         </div>
+        <div>
+            {% if form.errors %}
+                {% for field, errors in form.errors.items() %}
+                    {% for error in errors %}
+                        <div class="text-danger">{{ error }}</div>
+                    {% endfor %}
+                {% endfor %}
+            {% endif %}
+        </div>
 
         <!-- Forgot Password Form -->
         {% if form_type == 'forgot' %}
             <h2>Reset Your Password</h2>
             <form action="{{ url_for('auth.forgot_password') }}" method="post">
+                {{ form.hidden_tag() }}
+                
                 <div class="mb-3">
-                    <label for="email">Enter your registered email address:</label>
-                    <input type="email" id="email" name="email" class="form-control" autofocus required> 
+                    {{ form.email.label }}
+                    {{ form.email(class="form-control", autocomplete="email", autofocus=True)}}
                 </div>
-                <div><button type="submit" class="btn btn-primary me-2">Reset Password</button></div>
+                <div>{{ form.submit(class="btn btn-primary me-2")}}</div>
             </form>
 
         <!-- Email Found or Not Found Confirmation -->
@@ -32,15 +43,18 @@
         {% elif form_type == "reset" %}
             <h2>Set a New Password</h2>
             <form action="{{ url_for('auth.reset_password', token=token) }}" method="post">
+                {{ form.hidden_tag() }}
+
                 <div class="mb-3">
-                    <label for="new_password">New Password:</label>
-                    <input type="password" id="new_password" name="new_password" class="form-control" autofocus required> 
+                    {{ form.password.label }}
+                    {{ form.password(class="form-control", autocomplete="new-password") }}
                 </div>
+
                 <div class="mb-3">
-                    <label for="confirm_password">Confirm New Password:</label>
-                    <input type="password" id="confirm_password" name="confirm_password" class="form-control" required>
+                    {{ form.confirmation.label }}
+                    {{ form.confirmation(class="form-control", autocomplete="new-password") }}
                 </div>
-                <div><button type="submit" class="btn btn-primary me-2">Set Password</button></div>
+                <div>{{ form.submit(class="btn btn-primary me-2") }}</div>
             </form>
 
         <!-- Confirming new password submission -->
