--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -1,15 +1,14 @@
 {% extends "layout.html" %}
 
-{% block title %}
-    : History
-{% endblock %}
+{% block title %}: History{% endblock %}
 
 {% block body %}
     <div class="history-section container">
         <h2>Your Quiz History</h2>
 
         {% if history %}
-            <table class="table table-striped">
+        <div class="table-responsive">
+            <table class="table">
                 <thead>
                     <tr>
                         <th>Date</th>
@@ -34,6 +33,8 @@
                     {% endfor %}
                 </tbody>
             </table>
+        </div>
+            
         {% else %}
             <h3>No quiz history available.</h3>
             <a href="{{ url_for('main.quiz') }}" class="btn btn-primary">Take Your First Quiz</a>
