--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -17,24 +17,24 @@
         <!--header/Navigation bar-->
         <header>
             <nav class="navbar text-white navbar-expand-lg">
-                <a class="navbar-brand" href="{{ url_for('main.index') }}">DevBrain</a>
-                
+                {% if session.get("user_id") %}
+                    <a class="navbar-brand" href="{{ url_for('main.quiz') }}">DevBrain</a>
+                {% else %}
+                    <a class="navbar-brand" href="{{ url_for('main.index') }}">DevBrain</a>
+                {% endif %}
                  <!-- Toggler for mobile -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
-
-                <div class= "collapse navbar-collapse" id="navbarNav">        
-                    <!-- Left Navigation Links -->
-                    <ul class="navbar-nav">
-                        {% if session.get("user_id") %}
-                            <li class="nav-item"><a class="nav-link" href="{{ url_for('main.quiz') }}">Quiz</a></li>
+                
+                <div class= "collapse navbar-collapse" id="navbarNav">
+                    {% if session.get("user_id") %}        
+                        <!-- Left Navigation Links -->
+                        <ul class="navbar-nav">
                             <li class="nav-item"><a class="nav-link" href="{{ url_for('main.history') }}">History</a></li>
-                        {% endif %}
-                    </ul>
+                        </ul>
                     
-                    <!-- Right Navigation Links -->
-                    {% if session.get("user_id") %}
+                        <!-- Right Navigation Links -->
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item"><a class="btn btn-danger" href="{{ url_for('auth.logout') }}">Logout</a></li>
                         </ul>
