--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,30 +1,41 @@
 {% extends "layout.html" %}
 
-{% block title %}
-    : Login
-{% endblock %}
+{% block title %}: Login{% endblock %}
 
 {% block body %}
     <div class="login-section container">
         <h2>Login to DevBrain</h2>
-        {% if error %} <!-- Display error message if it exists -->
-            <p class="error-message">{{ error }}</p>
-        {% endif %}
+        <div class="mb-3">
+            <!-- Display error message if it exists -->
+            {% if error %} 
+                <h2 class="error-message">{{ error }}</h2>
+            {% endif %}
+        </div>
+        <div>
+            {% if form.errors %}
+                {% for field, errors in form.errors.items() %}
+                    {% for error in errors %}
+                        <div class="text-danger">{{ error }}</div>
+                    {% endfor %}
+                {% endfor %}
+            {% endif %}
+        </div>
 
         <form action="{{ url_for('auth.login') }}" method="post">
-            <!-- CSRF Token -->
-            <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
+             {{ form.hidden_tag() }}
+
             <div class="mb-3">
-                <label for="email" class="form-label">Email:</label>
-                <input type="text" class="form-control" id="email" name="email" autofocus autocomplete="email" required>
+                {{ form.email.label }}
+                {{ form.email(class="form-control", autocomplete="email", autofocus=True) }}
             </div>
 
             <div class="mb-3">
-                <label for="password" class="form-label">Password:</label>
-                <input type="password" class="form-control" id="password" name="password" autocomplete="current-password" required>
+                {{ form.password.label }}
+                {{ form.password(class="form-control", autocomplete="new-password") }}
             </div>
-            <div><button type="submit" class="btn btn-primary mb-3">Login</button></div>
-            <a type="submit" class="btn btn-secondary" href="{{ url_for('auth.forgot_password') }}">Forgotten Password</a>
+
+            {{ form.submit(class="btn btn-primary me-2") }}
         </form>
+        <p><a href="{{ url_for('auth.forgot_password') }}">Forgotten Password</a></p>
     </div>
 {% endblock %}
