--- a/app/templates/quiz.html
+++ b/app/templates/quiz.html
@@ -1,8 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}
-    : Quiz
-{% endblock %}
+{% block title %}: Quiz{% endblock %}
 
 {% block body %}
     {% if data %}
