--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,37 +1,52 @@
 {% extends "layout.html" %}
 
-{% block title %}
-    : Register
-{% endblock %}
+{% block title %}: Register{% endblock %}
 
 {% block body %}
     <div class="register-section container">
         <h2>Create an Account</h2>
-        {% if error %} <!-- Display error message if it exists -->
-            <p class="error-message">{{ error }}</p>
-        {% endif %}
+        <div class="mb-3">
+            <!-- Display error message if it exists -->
+            {% if error %} 
+                <h2 class="error-message">{{ error }}</h2>
+            {% endif %}
+        </div>
+        <div>
+            {% if form.errors %}
+                {% for field, errors in form.errors.items() %}
+                    {% for error in errors %}
+                        <div class="text-danger">{{ error }}</div>
+                    {% endfor %}
+                {% endfor %}
+            {% endif %}
+        </div>
 
         <form action="{{ url_for('auth.register') }}" method="post">
-            <!-- CSRF Token -->
-            <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
+            {{ form.hidden_tag() }}
+
             <div class="mb-3">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" class="form-control" autofocus autocomplete="email" required> 
+                {{ form.email.label }}
+                {{ form.email(class="form-control", autocomplete="email", autofocus=True) }}
             </div>
+
             <div class="mb-3">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" class="form-control" placeholder="Optional"> 
+                {{ form.username.label }}
+                {{ form.username(class="form-control", placeholder="Optional") }}
             </div>
+
             <div class="mb-3">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" class="form-control" autocomplete="new-password" required>
+                {{ form.password.label }}
+                {{ form.password(class="form-control", autocomplete="new-password") }}
             </div>
+
             <div class="mb-3">
-                <label for="confirmation">Confirm Password:</label>
-                <input type="password" id="confirmation" name="confirmation" class="form-control" autocomplete="new-password" required>
+                {{ form.confirmation.label }}
+                {{ form.confirmation(class="form-control", autocomplete="new-password") }}
             </div>
-            <div><button type="submit" class="btn btn-primary me-2">Register</button></div>
+
+            {{ form.submit(class="btn btn-primary me-2") }}
         </form>
+
         <p><a href="{{ url_for('auth.login') }}">Already have an account?</a></p>
     </div>
 {% endblock %}
