--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -25,17 +25,19 @@
              {{ form.hidden_tag() }}
 
             <div class="mb-3">
-                {{ form.email.label }}
+                {{ form.email.label }}:
                 {{ form.email(class="form-control", autocomplete="email", autofocus=True) }}
             </div>
 
             <div class="mb-3">
-                {{ form.password.label }}
+                {{ form.password.label }}:
                 {{ form.password(class="form-control", autocomplete="new-password") }}
             </div>
 
-            {{ form.submit(class="btn btn-primary me-2") }}
+            {{ form.submit(class="btn btn-primary") }}
         </form>
+        <p></p>
         <p><a href="{{ url_for('auth.forgot_password') }}">Forgotten Password</a></p>
+        <p><a href="{{ url_for('auth.register') }}" style="color: wheat;">No account?</a></p>
     </div>
 {% endblock %}
