edited history page & reset_email page

--- a/app/templates/reset_email.html
+++ b/app/templates/reset_email.html
@@ -9,7 +9,7 @@
         <tr>
             <td style="padding: 20px; text-align: center; border-bottom: 1px solid #e0e0e0;">
                 <!-- Company Logo -->
-                <img src="http://127.0.0.1:5000/static/cropped_logo.png" alt="DevBrain Logo" width="120" style="display:block; margin: auto;">
+                <img src="http://devbrain.online/static/cropped_logo.png" alt="DevBrain Logo" width="120" style="display:block; margin: auto;">
                 <h1 style="margin: 10px 0 0; font-size: 24px; color: #333333;">DevBrain</h1>
             </td>
         </tr>
