--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -4,40 +4,58 @@
 
 {% block body %}
     <div class="history-section container">
-        <h2>Your Quiz History</h2>
-
-        {% if history %}
         <div class="table-responsive">
-            <table class="table">
+            <h2>Grading Scale</h2>
+            <table class="table" style="text-align: center;">
                 <thead>
                     <tr>
-                        <th>Date</th>
-                        <th>Topic</th>
-                        <th>Difficulty</th>
-                        <th>Questions</th>
-                        <th>Score</th>
-                        <th>Grade</th>
+                        <th>Mastery</th>
+                        <th>Competent</th>
+                        <th>Average</th>
+                        <th>Fair</th>
+                        <th>Needs Improvement</th>
                     </tr>
                 </thead>
-
                 <tbody>
-                    {% for details in history %}
-                        <tr>
-                            <td>{{ details["date"] }}</td>
-                            <td>{{ details["topic"] }}</td>
-                            <td>{{ details["difficulty"] }}</td>
-                            <td>{{ details["question_count"] }}</td>
-                            <td>{{ details["score"] }}</td>
-                            <td>{{ details["grade"] }}</td>
-                        </tr>
-                    {% endfor %}
+                    <td>90+</td>
+                    <td>75 - 89</td>
+                    <td>60 - 74</td>
+                    <td>40 - 59</td>
+                    <td>0 - 39</td>
                 </tbody>
             </table>
         </div>
-            
-        {% else %}
-            <h3>No quiz history available.</h3>
-            <a href="{{ url_for('main.quiz') }}" class="btn btn-primary">Take Your First Quiz</a>
-        {% endif %}
+
+        <div class="table-responsive">
+            {% if history %}
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Topic</th>
+                            <th>Difficulty</th>
+                            <th>Questions</th>
+                            <th>Score</th>
+                            <th>Grade</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for details in history %}
+                            <tr>
+                                <td>{{ details["date"] }}</td>
+                                <td>{{ details["topic"] }}</td>
+                                <td>{{ details["difficulty"] }}</td>
+                                <td>{{ details["question_count"] }}</td>
+                                <td>{{ details["score"] }}</td>
+                                <td>{{ details["grade"] }}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            {% else %}
+                <h3>No quiz history available.</h3>
+                <a href="{{ url_for('main.quiz') }}" class="btn btn-primary">Take Your First Quiz</a>
+            {% endif %}
+        </div>
     </div>
 {% endblock %}
