--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -99,6 +99,11 @@
 
         <footer class="mt-auto py-3 text-center">
             <div class="container">
+                <ul class="footer-list">
+                    <li>Copyright &copy; 2025 DevBrain. All rights reserved.</li>
+                    <li><a href="https://github.com/RichardOyelowo/DevBrain.git">GitHub Page</a></li>
+                    <li><a href="{{ url_for('main.about') }}">About DevBrain</a></li>
+                </ul>
                 <p class="text-muted mb-0">Built with love for development by Richard Oyelowo</p>
             </div>
         </footer>  
